# hammertalk

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  check.sh  com.hammertalk.daemon.plist  download-model.sh  hammertalk-ctl  hammertalk.service  install-macos.sh  install-remote.sh  install.sh  release.sh
.github/workflows/: ci.yml
aur/: PKGBUILD  hammertalk.service
aur-bin/: PKGBUILD  hammertalk-bin.install
homebrew-tap/: README.md
homebrew-tap/Formula/: hammertalk.rb
hooks/: pre-commit
src/: engine.rs  hotkey.rs  lib.rs  main.rs
